<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <EditText
        android:id="@+id/edPassport"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="@string/passport_id"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edSurname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/edPassport"
        app:layout_constraintStart_toStartOf="@id/edPassport"
        app:layout_constraintTop_toBottomOf="@+id/edPassport"/>

    <EditText
        android:id="@+id/edName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/edSurname"
        app:layout_constraintStart_toStartOf="@id/edSurname"
        app:layout_constraintTop_toBottomOf="@+id/edSurname" />

    <EditText
        android:id="@+id/edPatronymic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/patronymic"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/edName"
        app:layout_constraintStart_toStartOf="@id/edName"
        app:layout_constraintTop_toBottomOf="@+id/edName" />

    <EditText
        android:id="@+id/edResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/result"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@id/edPatronymic"
        app:layout_constraintStart_toStartOf="@id/edPatronymic"
        app:layout_constraintTop_toBottomOf="@+id/edPatronymic" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintLeft_toLeftOf="@id/edResult"
        app:layout_constraintRight_toRightOf="@id/edResult"
        app:layout_constraintTop_toTopOf="@id/edResult">

        <AutoCompleteTextView
            android:id="@+id/atv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            android:text="Экономика" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bAddUser"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/green"
        android:text="@string/add_student"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
        app:layout_constraintStart_toStartOf="@+id/textInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>